--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>Uladszislau Bainiarovich</h1>
-    <b>gerbgv</b>
+    <b>gehrgegbgv</b>
     <i>few</i>
     <ul>Uuuuul</ul>
     <ol>Ooool</ol>
     <a href="URL">clickable text</a>
     <ol>
-        <p>
+        <p> 
             <table>
                 <tr>
                     <th>
