--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -13,19 +13,36 @@
     <ul>Uuuuul</ul>
     <ol>Ooool</ol>
     <a href="URL">clickable text</a>
-    <ol>
-        <p> 
-            <table>
-                <tr>
-                    <th>
-                        454
-                    </th>
-                </tr>
-                <tr>
-                    <td>43</td>>
-                </tr>
-            </table>
-        </p>
-    </ol>
+    <p></p>
+    <article>
+        <table border="1" width"100" height="100">
+            <tr>
+                <td></td>
+                <td rowspan="2"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+
+                <td rowspan="2" colspan="2"></td>
+            </tr>
+            <tr>
+                <th>
+                    
+                </th>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+                <td></td>
+
+            </tr>
+        </table>
+    </article>
 </body>
-</html>
