--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -14,35 +14,37 @@
     <ol>Ooool</ol>
     <a href="URL">clickable text</a>
     <p></p>
-    <article>
-        <table border="1" width"100" height="100">
-            <tr>
-                <td></td>
-                <td rowspan="2"></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
+    <main>
+        <article>
+            <table border="1" width"100" height="100">
+                <tr>
+                    <td></td>
+                    <td rowspan="2"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
 
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
 
-                <td rowspan="2" colspan="2"></td>
-            </tr>
-            <tr>
-                <th>
-                    
-                </th>
-                <td></td>
+                    <td rowspan="2" colspan="2"></td>
+                </tr>
+                <tr>
+                    <th>
+                        
+                    </th>
+                    <td></td>
 
-            </tr>
-            <tr>
-                <td colspan="2"></td>
-                <td></td>
+                </tr>
+                <tr>
+                    <td colspan="2"></td>
+                    <td></td>
 
-            </tr>
-        </table>
-    </article>
+                </tr>
+            </table>
+        </article>
+    </main>
 </body>  
